# projeto-exemplo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: sample_data.csv
docs/: documentation.md
src/: __init__.py  main.py
tests/: test_main.py
